# Gritador_Universe

./: .gitignore  AYUDA.json  BELTS.json  CMakeLists.txt  FAT_STARS.json  Makefile  NEW_values.json  ORBITAL_TILT.ison  Procedural Solar Flare Shader Blender Tutorial!.txt  README.md  SOLAR_SISTEM_DISTANCES.json  build.ps1  imgui.ini  values.json
cmake/toolchains/: mingw64.cmake
include/: blackhole_renderer.h  body.h  camera_input.h  catalog.h  composition.h  constants.h  gas_giants.h  gui.h  math_utils.h  physics.h  preview_renderer.h  pulsar_renderer.h  renderer.h  rocky_planets.h  shaders.h  solar_system_template.h  stellar_evolution.h  textures.h  thread_pool.h  ui.h
src/: main.cpp
